--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
       <version>19</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-controls</artifactId>
+      <version>19</version>
+    </dependency>
+
   </dependencies>
 
   <build>
