--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
           <artifactId>javafx-maven-plugin</artifactId>
           <version>0.0.8</version>
           <configuration>
-            <mainClass>ba.unsa.etf.rpr.App</mainClass>
+            <mainClass>ba.unsa.etf.rpr.AppFX</mainClass>
           </configuration>
         </plugin>
         <plugin>
@@ -85,7 +85,7 @@
             <archive>
               <manifest>
                 <addClasspath>true</addClasspath>
-                <mainClass>ba.unsa.etf.rpr.App</mainClass>
+                <mainClass>ba.unsa.etf.rpr.AppFX</mainClass>
               </manifest>
             </archive>
           </configuration>
